objects/zisf__ZoomTokenStorage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>zisf__pass__c</fullName>
        <description>partner password</description>
        <label>pass</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__pc__c</fullName>
        <description>parnter code</description>
        <label>pc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__token__c</fullName>
        <label>token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ZoomTokenStorage</label>
</CustomObject>